[vishal] added documenttion till forget password
