# src/routes/user.route.js
@@ -2,7 +2,7 @@ import express from 'express';
 import * as userController from '../controllers/user.controller';
 import {newUserValidator} from '../validators/user.validator';
 import {userAuth} from '../middlewares/auth.middleware';
-import { forgetPassword } from '../services/user.service';
+
 
 const router = express.Router();
 
@@ -10,6 +10,15 @@ const router = express.Router();
 //route to create a new user
 router.post('', newUserValidator, userController.newUser);
 router.post('/login',userController.login);
+
+
+
+
+// sendmail token to reset forgetPassword
+router.post("/forgetpassword",userController.forgetPassword);
+
+// reset the password using token genrated in above forget password
+router.post("/resetpassword",userController.resetPassword);
 
 // adding new note and assinging userid
 router.post("/addnote", userAuth, userController.addNote);
@@ -29,11 +38,6 @@ router.get("/trashed", userAuth, userController.findtrashed);
 router.get("/isArchived", userAuth, userController.isArchived);
 
 
-// sendmail token to reset forgetPassword
-router.post("/forgetpassword",userController.forgetPassword);
-
-// reset the password using token genrated in above forget password
-router.post("/resetpassword",userController.resetPassword);
 
 
 export default router;
